--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,10 @@ Variables
   --max-width: 1170px;
   --fixed-width: 450px;
   --clr-pink: #f28ab2;
+  --clr-red-dark: #b30000;
+  --clr-red-light: #ff6666;
+  --clr-green-dark: #269326;
+  --clr-green-light: hsl(125, 71%, 66%);
 }
 /*
 =============== 
@@ -57,8 +61,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-pink);
   color: var(--clr-grey-9);
   line-height: 1.5;
@@ -140,6 +144,14 @@ main {
   align-items: center;
 }
 
+.container .title {
+  margin-bottom: 2rem;
+  text-align: center;
+  text-transform: capitalize;
+  font-size: 1.5rem;
+  font-weight: 700 !important;
+}
+
 .container {
   width: 90vw;
   margin: 5rem 0;
@@ -155,9 +167,9 @@ main {
   margin-bottom: 2rem;
 }
 .person {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  column-gap: 0.75rem;
+  display: flex;
+  flex-direction: row;
+  column-gap: 1rem;
   margin-bottom: 1.5rem;
   align-items: center;
 }
@@ -174,13 +186,17 @@ main {
 .person p {
   margin-bottom: 0;
 }
-.container .clear-btn {
+.pesron-info {
+  flex: auto;
+}
+.container .clear-btn,
+.container .add-btn {
   color: var(--clr-white);
   display: block;
   width: 100%;
   border-color: transparent;
   background: var(--clr-pink);
-  margin: 2rem auto 0 auto;
+  margin: 2rem auto;
   text-transform: capitalize;
   font-size: 1.2rem;
   padding: 0.5rem 0;
@@ -191,11 +207,94 @@ main {
 }
 
 .container .btn {
-  margin-top: 1rem;
+  margin-right: 1rem;
   background: transparent;
   border-color: transparent;
+  background: transparent;
   color: var(--clr-primary-5);
   letter-spacing: var(--spacing);
   cursor: pointer;
-  
+}
+.form-control {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.list {
+  width: 100%;
+  padding: 0.25rem;
+  padding-left: 1rem;
+  margin-bottom: 0.5rem;
+  border-top-left-radius: var(--radius);
+  border-bottom-left-radius: var(--radius);
+  border-color: var(--clr-grey-4);
+  font-size: 1rem;
+  flex: 1 0 auto;
+  color: var(--clr-black);
+}
+.list::placeholder {
+  font-family: var(--ff-secondary);
+  color: var(--clr-grey-5);
+}
+.alert {
+  margin-bottom: 1rem;
+  height: 2rem;
+  display: grid;
+  align-items: center;
+  text-align: center;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  letter-spacing: var(--spacing);
+  text-transform: capitalize;
+}
+.alert-danger {
+  color: var(--clr-white);
+  background: #ed6a5a;
+}
+.alert-success {
+  color: var(--clr-black);
+  background: #66dcc2;
+}
+.countdown-wrapper {
+  min-width: 50px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.countdown-box {
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--clr-primary-4);
+  width: 45px;
+  height: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.legend {
+  font-size: 0.8rem;
+  color: #a6b1e1;
+}
+.wish {
+  font-size: 1rem;
+  font-weight: 600;
+  margin-top: 1rem;
+  color: var(--clr-grey-6);
+  padding: 1rem;
+  background: rgb(237, 242, 251);
+  background: linear-gradient(
+    90deg,
+    rgba(237, 242, 251, 1) 50%,
+    rgba(253, 197, 245, 1) 100%
+  );
+}
+.wish strong {
+  color: var(--clr-grey-8);
+}
+@media screen and (max-width: 576px) {
+  .countdown-wrapper {
+    min-width: 50px;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
