--- a/src/styles.css
+++ b/src/styles.css
@@ -42,10 +42,6 @@ Variables
   --max-width: 1170px;
   --fixed-width: 450px;
   --clr-pink: #f28ab2;
-  --clr-red-dark: #b30000;
-  --clr-red-light: #ff6666;
-  --clr-green-dark: #269326;
-  --clr-green-light: hsl(125, 71%, 66%);
 }
 /*
 =============== 
@@ -231,6 +227,7 @@ main {
   font-size: 1rem;
   flex: 1 0 auto;
   color: var(--clr-black);
+  text-transform: capitalize;
 }
 .list::placeholder {
   font-family: var(--ff-secondary);
@@ -263,7 +260,7 @@ main {
 .countdown-box {
   font-size: 1rem;
   font-weight: 600;
-  color: var(--clr-primary-4);
+  color: var(--clr-green-dark);
   width: 45px;
   height: 50px;
   display: flex;
@@ -283,14 +280,15 @@ main {
   color: var(--clr-grey-6);
   padding: 1rem;
   background: rgb(237, 242, 251);
-  background: linear-gradient(
-    90deg,
-    rgba(237, 242, 251, 1) 50%,
-    rgba(253, 197, 245, 1) 100%
-  );
 }
 .wish strong {
   color: var(--clr-grey-8);
+}
+.wish p:first-child {
+  margin-bottom: 1rem;
+}
+.wish .name {
+  text-transform: capitalize;
 }
 @media screen and (max-width: 576px) {
   .countdown-wrapper {
