more css changes

--- a/src/styles.css
+++ b/src/styles.css
@@ -166,8 +166,13 @@ main {
   display: flex;
   flex-direction: row;
   column-gap: 1rem;
+  padding: 1rem 0;
   margin-bottom: 1.5rem;
   align-items: center;
+  box-shadow: 5px 5px 5px var(--clr-grey-1);
+}
+.person:hover {
+  transform: translateX(10px);
 }
 .person img {
   width: 75px;
@@ -221,9 +226,8 @@ main {
   padding: 0.25rem;
   padding-left: 1rem;
   margin-bottom: 0.5rem;
-  border-top-left-radius: var(--radius);
-  border-bottom-left-radius: var(--radius);
-  border-color: var(--clr-grey-4);
+  border: none;
+  border-bottom: 3px solid var(--clr-pink);
   font-size: 1rem;
   flex: 1 0 auto;
   color: var(--clr-black);
@@ -232,6 +236,10 @@ main {
 .list::placeholder {
   font-family: var(--ff-secondary);
   color: var(--clr-grey-5);
+}
+.list:focus-visible {
+  outline: none;
+  border-bottom: 3px solid var(--clr-primary-4);
 }
 .alert {
   margin-bottom: 1rem;
@@ -279,7 +287,7 @@ main {
   margin-top: 1rem;
   color: var(--clr-grey-6);
   padding: 1rem;
-  background: rgb(237, 242, 251);
+  /* background: rgb(237, 242, 251); */
 }
 .wish strong {
   color: var(--clr-grey-8);
