increased btn size

--- a/src/styles.css
+++ b/src/styles.css
@@ -244,6 +244,7 @@ main {
 
 .container .btn {
   margin-right: 1rem;
+  margin-bottom: 1rem;
   background: transparent;
   border-color: transparent;
   background: transparent;
