--- a/src/styles.css
+++ b/src/styles.css
@@ -158,6 +158,11 @@ main {
   padding: 1.5rem 2rem;
   box-shadow: var(--dark-shadow);
 }
+@media screen and (max-width: 425px) {
+  .container {
+    padding: 1.5rem 1.25rem;
+  }
+}
 .container h3 {
   font-weight: normal;
   text-transform: none;
@@ -168,6 +173,7 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  column-gap: 1.5rem;
 }
 .title-section button {
   background: none;
@@ -226,6 +232,9 @@ main {
 .pesron-info {
   flex: auto;
 }
+.btns {
+  display: grid;
+}
 .container .clear-btn,
 .container .add-btn {
   color: var(--clr-white);
@@ -239,10 +248,14 @@ main {
   padding: 0.5rem 0;
   letter-spacing: var(--spacing);
   border-radius: var(--radius);
-  outline: 1px solid rgba(242, 138, 178, 0.8);
   cursor: pointer;
+  transition: ease-out 0.1s;
+  box-shadow: inset 0 0 0 0 var(--clr-pink);
 }
-
+.container .clear-btn:hover,
+.container .add-btn:hover {
+  box-shadow: inset 386px 0 0 0 var(--clr-primary-4);
+}
 .container .btn {
   margin-right: 1rem;
   margin-bottom: 1rem;
